--- a/Game/DriveAndAvoid/DriveAndAvoid.vcxproj
+++ b/Game/DriveAndAvoid/DriveAndAvoid.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="Utility\InputControl.cpp" />
     <ClCompile Include="Scene\GameMainScene.cpp" />
     <ClCompile Include="Scene\HelpScene.cpp" />
-    <ClCompile Include="Object\AppMain.cpp" />
+    <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="Object\Barrier.cpp" />
     <ClCompile Include="Object\Enemy.cpp" />
     <ClCompile Include="Object\Player.cpp" />
